--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style/index.css">
     </head>
     <body>
-        <article>
+        <h1>Hello, World!</h1>
+        <!-- <article>
             <header>
                 <h2>Metamorphosis</h2>
             </header>
@@ -31,6 +32,6 @@
             <footer>
 
             </footer>
-        </article>
+        </article> -->
     </body>
 </html>
