--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
         <link rel="stylesheet" href="style/index.css">
     </head>
     <body>
-        <h1>Hello, World!</h1>
-        <!-- <article>
+        <article>
             <header>
-                <h2>Metamorphosis</h2>
+                <h1>Metamorphosis</h1>
             </header>
             <main>
                 <article>
-                    <p>by Franz Kafka</p>
-                    <p>Chapter One</p>
+                    <h2>Chapter One</h2>
                     <p>
                         One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.
                     </p>
@@ -30,8 +28,8 @@
                 </article>
             </main>
             <footer>
-
+                <p>Story by Franz Kafka</p>
             </footer>
-        </article> -->
+        </article>
     </body>
 </html>
