Begin building story page

--- a/index.html
+++ b/index.html
@@ -2,38 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>?</title>
-        <link rel="stylesheet" href="style/index.css">
+        <title>The Town Mouse & the Country Mouse</title>
+        <!-- <link rel="stylesheet" href="style/index.css"> -->
     </head>
     <body>
         <div class="container">
-            <article>
-                <header>
-                    <h1>Metamorphosis</h1>
-                </header>
-                <main>
-                    <article>
-                        <h2>Chapter One</h2>
-                        <p>
-                            One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.
-                        </p>
-                        <img class="image-wrap-left" src="spider.jpg">
-                        <p>
-                            "What's happened to me?" he thought. It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer.
-                        </p>
-                        <p>
-                            Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad. "How about if I sleep a little bit longer and forget all this nonsense", he thought, but that was something he was unable to do because he was used to sleeping on his right, and in his present state couldn't get into that position. However hard he threw himself onto his right, he always rolled back to where he was. He must have tried it a hundred times, shut his eyes so that he wouldn't have to look at the floundering legs, and only stopped when he began to feel a mild, dull pain there that he had never felt before.
-                        </p>
-                        <img class="image-wrap-right" src="portrait.jpg">
-                        <p>
-                            "Oh, God", he thought, "what a strenuous career it is that I've chosen! Travelling day in and day out. Doing business like this takes much more effort than doing your own business at home, and on top of that there's the curse of travelling, worries about making train connections, bad and irregular food, contact with different people all the time so that you can never get to know anyone or become friendly with them. It can all go to Hell!" He felt a slight itch up on his belly; pushed himself slowly up on his back towards the headboard so that he could lift his head better; found where the itch was, and saw that it was covered with lots of little white spots which he didn't know what to make of; and when he tried to feel the place with one of his legs he drew it quickly back because as soon as he touched it he was overcome by a cold shudder.
-                        </p>                    
-                    </article>
-                </main>
-                <footer>
-                    <p>Story by Franz Kafka</p>
-                </footer>
-            </article>
-        </div>
+            <header>
+                <h2>SkillShare</h2>
+            </header>
+            <main>
+                <h1>The Town Mouse & the Country Mouse</h1>
+                <p>A Town Mouse once visited a relative who lived in the country. For lunch the Country Mouse served wheat stalks, roots, and acorns, with a dash of cold water for drink. The Town Mouse ate very sparingly, nibbling a little of this and a little of that, and by her manner making it very plain that she ate the simple food only to be polite.</p>
+                <p>After the meal the friends had a long talk, or rather the Town Mouse talked about her life in the city while the Country Mouse listened. They then went to bed in a cozy nest in the hedgerow and slept in quiet and comfort until morning. In her sleep the Country Mouse dreamed she was a Town Mouse with all the luxuries and delights of city life that her friend had described for her. So the next day when the Town Mouse asked the Country Mouse to go home with her to the city, she gladly said yes.</p>
+                <p>When they reached the mansion in which the Town Mouse lived, they found on the table in the dining room the leavings of a very fine banquet. There were sweetmeats and jellies, pastries, delicious cheeses, indeed, the most tempting foods that a Mouse can imagine. But just as the Country Mouse was about to nibble a dainty bit of pastry, she heard a Cat mew loudly and scratch at the door. In great fear the Mice scurried to a hiding place, where they lay quite still for a long time, hardly daring to breathe. When at last they ventured back to the feast, the door opened suddenly and in came the servants to clear the table, followed by the House Dog.</p>
+                <p>The Country Mouse stopped in the Town Mouse's den only long enough to pick up her carpet bag and umbrella.</p>
+                <p>"You may have luxuries and dainties that I have not," she said as she hurried away, "but I prefer my plain food and simple life in the country with the peace and security that go with it."</p>
+            </main>
+            <footer>
+            </footer>
+        </div> 
     </body>
 </html>
